--- a/frontend/src/components/AirBnb/AirBnb.scss
+++ b/frontend/src/components/AirBnb/AirBnb.scss
@@ -8,6 +8,11 @@
 
     border-radius: var(--border-radius);
 
+    &:hover {
+        background-color: var(--green);
+        color: white;
+    }
+
     img {
         border-radius: var(--border-radius);
         width: 100%;
