--- a/frontend/src/layouts/AirBnbList/AirBnbList.scss
+++ b/frontend/src/layouts/AirBnbList/AirBnbList.scss
@@ -6,4 +6,34 @@
     width: auto;
     
     margin: 0rem 1rem;
+
+    #airbnb-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        padding: 0rem 2rem;
+
+        #page-selector {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+
+            button {
+                background-color: var(--light-pink);
+                cursor: pointer;
+
+                width: 2rem;
+                height: 2rem;
+
+                border: 0;
+                border-radius: var(--border-radius);
+
+                &:hover {
+                    background-color: var(--strong-pink);
+                    color: white;
+                }
+            }
+        }
+    }
 }
