style: Styled NavBar
This modifies:
    - NavBar
    - colors

This inits:
    - NavBar style
    - NavButtons

--- a/frontend/src/sass/colors.scss
+++ b/frontend/src/sass/colors.scss
@@ -1,7 +1,11 @@
 :root {
-    --yellow: #F6BD60;
     --light-gray: #F7EDE2;
+    --very-light-yellow: #FFF5E0;
+    --yellow: #F6BD60;
+    --very-light-orange: #FFDBC3;
     --light-pink: #F5CAC3;
-    --green: #84A59D;
+    --peach: #EE9E8E;
     --strong-pink: #F28482;
+    --green: #84A59D;
+    --very-dark-purple: #190933;
 }
